<resources>
    <string name="app_name">Honeywell IAQ</string>
    <string name="dashboard_title">IAQ</string>
    <string name="action_share">Sharing</string>
    <string name="iaq_settings">My IAQ</string>
    <string name="brazil">Brazil</string>
    <string name="brunei">Brunei</string>
    <string name="china">China</string>
    <string name="dubai">Dubai</string>
    <string name="india">India</string>
    <string name="indonesia">Indonesia</string>
    <string name="malaysia">Malaysia</string>
    <string name="philippines">Philippines</string>
    <string name="singapore">Singapore</string>
    <string name="turkey">Turkey</string>
    <string name="us">United States</string>
    <string name="iran">Iran</string>
    <string name="hangkang">Hangkang</string>
    <string name="macao">Macao</string>
    <string name="taiwan">Taiwan</string>
    <string name="login_tip">Already have an account? please</string>
    <string name="login">Login</string>
    <string name="logining">Loginning&#8230;</string>
    <string name="auto_logining">Loginning&#8230;</string>
    <string name="country">Country</string>
    <string name="phone">Phone number</string>
    <string name="phone_number">Input your phone number</string>
    <string name="validation">Validation</string>
    <string name="validation_code">Verification code</string>
    <string name="get_validation_code">Send verification code</string>
    <string name="get_validation_code_again">Send verification code again</string>
    <string name="get_validation_code_success">Verification code was sent</string>
    <string name="get_validation_code_fail">Get verification code fail</string>
    <string name="wrong_validation_code">Invalid verification code</string>
    <string name="send_validation_code">send</string>
    <string name="resend_validation_code">resend</string>
    <string name="forgot_password">forgot password</string>
    <string name="nickname">Nickname</string>
    <string name="input_nickname">Input nickname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password again</string>
    <string name="password_hint">8&#8211;30&#160;characters</string>
    <string name="confirm_password_hint">Input your password again</string>
    <string name="register">Register</string>
    <string name="registering">Registering&#8230;</string>
    <string name="input_phone">Please input your phone number</string>
    <string name="wrong_phone_number">Invalid phone number</string>
    <string name="input_validation_code">Input verification code</string>
    <string name="input_password">Please input your password</string>
    <string name="invalid_password">Password should contain upper and lowercase letters and digits, 8&#8211;30&#160;characters.</string>
    <string name="password_not_same">Not the same password</string>
    <string name="register_success">Register success</string>
    <string name="reset_password_success">Reset password success</string>
    <string name="register_fail">Register fail</string>
    <string name="register_already">Account is registered</string>
    <string name="not_register">Account is not registered</string>
    <string name="wrong_password">Account or password wrong</string>
    <string name="create_user">New user</string>
    <string name="forget_password">Forget password</string>
    <string name="set_password">Set Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">reset</string>
    <string name="reset_fail">Reset failed</string>
    <string name="login_fail">Login fail</string>
    <string name="no_network">Network is not available</string>
    <string name="invalid_language">Invalid language</string>
    <string name="exit_confirm">Do you want to quit?</string>
    <string name="iaq_network">IAQ network settings</string>
    <string name="configure_iaq_wifi">Configure Wi-Fi settings for IAQ</string>
    <string name="configure_iaq_wifi_message">IAQ connect Honeywell cloud service by Wi-Fi network</string>
    <string name="ssid">Wi-Fi name</string>
    <string name="network_password">Network password</string>
    <string name="input_ssid">Input network name</string>
    <string name="input_pwd">Input network password</string>
    <string name="iaq_link">IAQ connecting</string>
    <string name="link_notice">notice:</string>
    <string name="link_only_2.4g">Only support 2.4G</string>
    <string name="start_connect">Start connecting</string>
    <string name="input_wireless_password">Input Wi-Fi password</string>
    <string name="iaq_network_fail">Connection timed out</string>
    <string name="check_iaq">Check the indicator light on the IAQ panel for diagnosis:</string>
    <string name="iaq_wifi_connected">Wi-Fi light is on but Cloud light shows red</string>
    <string name="iaq_cloud_connected">Cloud light shows white</string>
    <string name="iaq_wifi_connect_fail">Wi-Fi light is off</string>
    <string name="iaq_cloud_connect_fail">Cloud light is red</string>
    <string name="wifi_lamp">Wi-Fi lamp</string>
    <string name="cloud_lamp">Cloud lamp</string>
    <string name="iaq_cloud_connect">Register Honeywell services</string>
    <string name="iaq_cloud_connect_description">This process may take several minutes,&#160;Please do not exit your app. Please also ensure that your router and mobile phone are connected to the Internet.</string>
    <string name="check_iaq_progress">Check the indicator light on the IAQ panel to understand its progress:</string>
    <string name="iaq_wifi_connect_on">Wi-Fi indicator is on</string>
    <string name="iaq_wifi_connect_success">&#160;-&#160;Wireless connection has been established</string>
    <string name="iaq_cloud_connect_success">&#160;-&#160;The device is connected to Honeywell Services, and is undergoing final configuration&#160;</string>
    <string name="wifi_indicator_off_message">IAQ is not successfully connected to wireless network. Please check to ensure your Wi-Fi password is correct. IAQ does not currently support 5G Wi-Fi configuration.</string>
    <string name="cloud_indicator_red_message">IAQ is not successfully bound to Honeywell Services. Please check to ensure that router is connected to the Internet</string>
    <string name="cloud_indicator_white_message">Please check to ensure that your mobile phone is connected to the Internet. Please also check that IAQ is not bound with other accounts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_to">Navigation To</string>
    <string name="wifi_fail_to_scan">Unable to scan for networks</string>
    <string name="config_iaq">IAQ configuration</string>
    <string name="iaq_network_assistant">IAQ network assistant</string>
    <string name="add_iaq">Add IAQ</string>
    <string name="about">About</string>
    <string name="data_explain">Data explain</string>
    <string name="logout">Exit</string>
    <string name="logout_fail">Exit fail</string>
    <string name="bind_device">Device bind</string>
    <string name="bind_device_fail">IAQ bind fail</string>
    <string name="binding">IAQ binding&#8230;</string>
    <string name="bind_error_device_bind">Device was bound by other account</string>
    <string name="bind_error_password_error">Wrong password</string>
    <string name="iaq_pm">PM2.5</string>
    <string name="time">Time</string>
    <string name="hour">Hour</string>
    <string name="hour_unit">h</string>
    <string name="day">/</string>
    <string name="day_unit">d</string>
    <string name="week">Week</string>
    <string name="month">/</string>
    <string name="year"></string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="one">Monday</string>
    <string name="two">Tuesday</string>
    <string name="three">Wednesday</string>
    <string name="four">Thursday</string>
    <string name="five">Friday</string>
    <string name="six">Saturday</string>
    <string name="seven">Sunday</string>
    <string name="statistic_day">Daily</string>
    <string name="statistic_month">Monthly</string>
    <string name="title_activity_my_iaq">MyIaqActivity</string>
    <string name="action_settings">Settings</string>
    <string name="choose_share_image">Image sharing</string>
    <string name="share_image_to">Share it to</string>
    <string name="no_iaq_data">No data</string>
    <string name="day_iaq_data">PM2.5 today</string>
    <string name="company_information">Company information</string>
    <string name="copyright">Copyright</string>
    <string name="version">Version</string>
    <string name="company_information_text">Honeywell International Inc.</string>
    <string name="copyright_text">\@ 2017&#160;Honeywell International Inc.\nFor patent information, see</string>
    <string name="copyright_link">http://www.honeywellaidc.com/patents.aspx</string>
    <string name="name_home">Home name</string>
    <string name="serial_number">Serial number:</string>
    <string name="input_serial_number">Input the serial number</string>
    <string name="setting_temperature_unit">Temperature Unit</string>
    <string name="setting_celsius_unit">Celsius</string>
    <string name="setting_fahrenheit_unit">Fahrenheit</string>
    <string name="setting_sleep_mode">Sleep mode</string>
    <string name="remove">Remove</string>
    <string name="configure_dsc">View air quality and its history data remotely</string>
    <string name="confirm_iaq">Confirm device information</string>
    <string name="start_configure_mode">Open configuration mode of IAQ</string>
    <string name="press_iaq">Simultaneously press "\""&#34;&#60;&#34;"\"" and "\""&#34;&#62;&#34;"\"" \n until they appear on the monitor and stay at the "\""&#34;&#8230;&#34;"\"" figure</string>
    <string name="press_iaq_1">"\""&#34;&#60;&#34;"\""</string>
    <string name="press_iaq_2">"\""&#34;&#62;&#34;"\""</string>
    <string name="press_iaq_3">"\""&#34;&#8230;&#34;"\""</string>
    <string name="next">Next</string>
    <string name="scan_iaq_barcode">Scan the QR code on the back of the product</string>
    <string name="scan_barcode">Scan the QR code</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="scan_fail">Scan fail</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_serial_number">Invalid serial number</string>
    <string name="iaq_wifi_description">IAQ only support 2.4GHz network, please make sure that your phone network is 2.4GHz</string>
    <string name="reset_wifi">Reset</string>
    <string name="no_connect_wifi_message">Wi-Fi is disconnected，Please open Wi-Fi network</string>
    <string name="no_connect_wifi">Wi-Fi is not available，Please check it</string>
    <string name="iaq_connect_wifi">Connecting Wi-Fi&#8230;</string>
    <string name="iaq_connect_wifi_fail">Connect the device to network fail</string>
    <string name="iaq_connect_wifi_timeout">Connect IAQ timeout，Make sure you had opened IAQ configuration mode and your Wi-Fi network is 2.4G</string>
    <string name="home_name">Home name</string>
    <string name="room">Room name</string>
    <string name="room_title">Room</string>
    <string name="city">City</string>
    <string name="remove_iaq">Remove IAQ information</string>
    <string name="complete">Complete</string>
    <string name="connect">Connect</string>
    <string name="press_power_to_open">Press power to open the device</string>
    <string name="wifi_flash">the icon of Wi-Fi on the device starts to blink</string>
</resources>