<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_send_validation_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />


    <Button
        android:id="@+id/btn_next"
        style="@style/bottom_button_style"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginRight="@dimen/margin_start_end"
        android:enabled="false"
        android:text="@string/next" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginRight="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/title_text_style"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_frame"
            android:spinnerMode="dropdown" />

        <TextView
            style="@style/title_text_style"
            android:layout_marginTop="15dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/register_phone_number"
            style="@style/edit_text_style"
            android:hint="@string/phone_number"
            android:inputType="number" />

        <TextView
            style="@style/title_text_style"
            android:layout_marginTop="15dp"
            android:text="@string/validation_code" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_validation_code"
                style="@style/edit_text_style"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/send_validation_code"
                android:hint="@string/input_validation_code"
                android:inputType="number" />

            <Button
                android:id="@+id/send_validation_code"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_validation_code"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/register_validation_code"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_bg"
                android:singleLine="true"
                android:text="@string/send_validation_code"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
