<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/network_setup_step_top"
            android:src="@mipmap/step3"/>

        <TextView
            android:id="@+id/serialNumberTitle"
            style="@style/title_text_style"
            android:text="@string/serial_number"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/serialNumber"
            style="@style/title_text_style"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>


        <TextView
            style="@style/title_text_style"
            android:text="@string/home_name"
            />

        <EditText
            android:id="@+id/home_name"
            style="@style/edit_text_style"
            android:imeOptions="actionNext"/>

        <TextView
            style="@style/title_text_style"
            android:text="@string/room"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/room"
            style="@style/edit_text_style"
            android:imeOptions="actionNext"
            />

        <TextView
            style="@style/title_text_style"
            android:text="@string/city"
            />

        <TextView
            android:id="@+id/city"
            style="@style/edit_text_style"
            android:imeOptions="actionDone"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_complete"
        style="@style/bottom_button_style"
        android:text="@string/complete"
        />
</RelativeLayout>
