<?xml version="1.0" encoding="utf-8"?>
<com.honeywell.iaq.widget.SoftInputAdjustTopView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/title_text_style"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_frame"
            android:spinnerMode="dropdown"></Spinner>
        <!--android:spinnerMode="dropdown"-->
        <!--android:background="@drawable/edittext_frame"-->
        <TextView
            style="@style/title_text_style"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone_number"
            style="@style/edit_text_style"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            style="@style/title_text_style"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            style="@style/edit_text_style"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingRight="10dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_group"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="15dp"
        android:text="@string/forget_password"
        android:textColor="#3F8DC4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ll_group"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="15dp"
        android:text="@string/create_user"
        android:textColor="#3F8DC4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/bottom_button_style"
        android:enabled="false"
        android:text="@string/login" />
</com.honeywell.iaq.widget.SoftInputAdjustTopView>
