<?xml version="1.0" encoding="utf-8"?>
<com.honeywell.iaq.widget.SoftInputAdjustTopView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_send_validation_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/title_text_style"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_frame"
            android:spinnerMode="dropdown"></Spinner>
        <!--android:spinnerMode="dropdown"-->
        <!--android:background="@drawable/edittext_frame"-->
        <TextView
            style="@style/title_text_style"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/register_phone_number"
            style="@style/edit_text_style"
            android:hint="@string/phone_number"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/bottom_button_style"
        android:enabled="false"
        android:text="@string/get_validation_code" />


</com.honeywell.iaq.widget.SoftInputAdjustTopView>
