<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_send_validation_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />


    <Button
        android:id="@+id/btn_done"
        style="@style/bottom_button_style"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginRight="@dimen/margin_start_end"
        android:enabled="false"
        android:text="@string/next" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/margin_start_end"
        android:layout_marginRight="@dimen/margin_start_end"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <TextView
            style="@style/title_text_style"
            android:text="@string/password" />

        <EditText
            android:id="@+id/register_password"
            style="@style/edit_text_style"
            android:inputType="textPassword" />

        <TextView
            style="@style/title_text_style"
            android:textSize="14sp"
            android:singleLine="false"
            android:text="@string/invalid_password" />

        <TextView
            style="@style/title_text_style"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/confirm_register_pwd"
            style="@style/edit_text_style"
            android:inputType="textPassword" />


    </LinearLayout>


</RelativeLayout>
